# mol-tdn

./: .gitignore  .pre-commit-config.yaml  .prospector.yaml  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: ci.yaml  docs.yaml
docs/: api.md  comparison.md  development.md  equations.md  index.md  limitations.md  manifesto.md  plotting.md  quickstart.md  results.md  scans.md
docs/javascripts/: mathjax.js
mol_tdn/: __init__.py  eos.py  molecule.py  plot.py
scripts/: generate_plot_gallery.py
src/mol_tdn/: __init__.py  eos.py  get_data.py  molecule.py  plot.py  result.py
src/mol_tdn/data/: molecules.csv  periodic_table.csv
tests/: test_docs.py  test_eos.py  test_gallery.py  test_plot.py
