[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mol-tdn"
version = "0.0.1"
description = "Tools for computing thermodynamic properties of molecular fluids"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Daniele Ongari", email = "daniele.ongari@gmail.com" },
]
keywords = ["thermodynamics", "equation-of-state", "molecular-fluids", "chemistry"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "matplotlib>=3.6",
  "numpy>=1.23",
  "pandas>=1.5",
  "plotly>=5.18",
]

[project.optional-dependencies]
test = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
]
dev = [
  "build>=1.2",
  "mkdocs-material>=9.5",
  "pre-commit>=3.5",
  "pytest>=7.4",
  "pytest-cov>=4.1",
]

docs = [
  "mkdocs-material>=9.5",
]

[project.urls]
Homepage = "https://github.com/danieleongari/mol-tdn"
Repository = "https://github.com/danieleongari/mol-tdn"
Issues = "https://github.com/danieleongari/mol-tdn/issues"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mol_tdn = ["data/*.csv"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
testpaths = ["tests"]

[tool.coverage.run]
source = ["mol_tdn"]

[tool.coverage.report]
show_missing = true
skip_covered = true
